Реализована функция  удаления друзей.

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <script>
         // Initialize Firebase
         var config = {
-            apiKey: "AIzaSyD90ZhwQ8nv3-13s1KO5phRTnfzqszhAek",
-            authDomain: "max-home-page.firebaseapp.com",
-            databaseURL: "https://max-home-page.firebaseio.com",
-            storageBucket: "max-home-page.appspot.com",
-            messagingSenderId: "984666710629"
+            apiKey: "AIzaSyAt_RMsqYILSb0du9oW5uOzS6X3khS07eU",
+            authDomain: "friends-58418.firebaseapp.com",
+            databaseURL: "https://friends-58418.firebaseio.com",
+            storageBucket: "friends-58418.appspot.com",
+            messagingSenderId: "1065172169473"
         };
         firebase.initializeApp(config);
     </script>
