--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="css/bootstrap-switch.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
@@ -17,7 +18,8 @@
             <div class="center">
                 <span><i class="fa fa-female" aria-hidden="true"></i></span>
                     <input class="name" type="text" placeholder="New person" />
-                <span><i class="fa fa-male" aria-hidden="true"></i></span> 
+                <span><i class="fa fa-male" aria-hidden="true"></i></span> <br/>
+                <input type="checkbox" name="my-checkbox" data-label-text="Delit friends" data-of-color="grey">
             </div> 
             <div class="container">
                 <div class="list female center">
@@ -50,6 +52,7 @@
     </script>
     <!-------------------------------------------------------->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="bootstrap-switch.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
